Bug 341231 - "Select contacts that you want really to merge:" might be better as "Select contacts that you really want to merge:"
Summary: "Select contacts that you want really to merge:" might be better as "Select c...
Status: RESOLVED FIXED
Alias: None
Product: kaddressbook
Classification: Applications
Component: general (other bugs)
Version First Reported In: GIT
Platform: unspecified All
: NOR minor
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-11-24 16:13 UTC by Raphaël Jakse
Modified: 2014-11-24 22:50 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.0.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Raphaël Jakse 2014-11-24 16:13:48 UTC
Hello,

In kaddressbook.po, I just noticed the following message:
"Select contacts that you want really to merge:" 
in merge/mergecontactwidget.cpp:43.

I think the adverb should come before the verbal base:
"Select contacts that you really want to merge:" 

Other suggestions :

"Error during merge contacts." => "Error while merging contacts."

"No contact duplicated found." => "No duplicated contact found."

"Select addressbook where to store merged contact:" => "Select the addressbook in which to store merged contacts:"

Cheers,
Raphaël.

Reproducible: Always
Comment 1 Laurent Montel 2014-11-24 22:50:10 UTC
Git commit 9a778a559d19d40ae70c535dc9072b25af76517c by Montel Laurent.
Committed on 24/11/2014 at 22:49.
Pushed by mlaurent into branch 'master'.

Fix Bug 341231 - "Select contacts that you want really to merge:" might be better as "Select contacts that you really want to merge:"

This code is not used in kde 4 => I fix it in kf5.

FIXED-IN: 5.0.0

M  +1    -1    kaddressbook/merge/mergecontactduplicatecontactdialog.cpp
M  +1    -1    kaddressbook/merge/mergecontactsdialog.cpp
M  +2    -2    kaddressbook/merge/mergecontactwidget.cpp

http://commits.kde.org/kdepim/9a778a559d19d40ae70c535dc9072b25af76517c