Fix Bug 341231 - "Select contacts that you want really to merge:" might be better as "Select contacts that you really want to merge:"

This code is not used in kde 4 => I fix it in kf5.

FIXED-IN: 5.0.0
BUG: 341231